Update DBToKafka documentation for formatting and clarity